fix header spacing again

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -20,6 +20,8 @@ footer {
 }
 header {
   margin-top: 25px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 nav {
   text-align: right;
